--- a/.classpath
+++ b/.classpath
@@ -1,62 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry combineaccessrules="false" kind="src" path="/ParserProject">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="Optaplanner/binaries/activation-1.1.1.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/animal-sniffer-annotations-1.14.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/antlr-runtime-3.5.2.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/checker-compat-qual-2.0.0.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/commons-io-2.6.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/commons-lang3-3.8.1.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/commons-math3-3.4.1.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/drools-canonical-model-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/drools-compiler-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/drools-core-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/drools-core-dynamic-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/drools-core-reflective-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/drools-model-compiler-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/drools-mvel-compiler-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/drools-mvel-parser-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/error_prone_annotations-2.1.3.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/freemarker-2.3.28.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/j2objc-annotations-1.1.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/jackson-annotations-2.9.9.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/jackson-core-2.9.9.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/jackson-databind-2.9.10.1.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/javaparser-core-3.13.10.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/javassist-3.22.0-GA.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/javax.persistence-api-2.2.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/jaxb-core-2.3.0.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/jaxb-impl-2.3.0.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/jboss-jaxb-api_2.3_spec-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/jfreechart-1.5.0.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/jsr305-1.3.9.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/kie-api-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/kie-internal-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/kie-soup-commons-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/kie-soup-maven-support-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/kie-soup-project-datamodel-api-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/kie-soup-project-datamodel-commons-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/mvel2-2.4.7.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/optaplanner-benchmark-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/optaplanner-core-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/optaplanner-persistence-common-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/optaplanner-persistence-jackson-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/optaplanner-persistence-jaxb-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/optaplanner-persistence-jpa-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/optaplanner-persistence-xstream-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/optaplanner-test-7.34.0.Final.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/protobuf-java-3.6.1.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/reflections-0.9.11.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/slf4j-api-1.7.26.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/xmlpull-1.2.0.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/xpp3_min-1.2.0.jar"/>
-	<classpathentry kind="lib" path="Optaplanner/binaries/xstream-1.4.11.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/activation-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/animal-sniffer-annotations-1.14.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/antlr-runtime-3.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/checker-compat-qual-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/commons-codec-1.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/commons-io-2.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/commons-lang3-3.8.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/commons-math3-3.4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/drools-canonical-model-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/drools-compiler-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/drools-core-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/drools-core-dynamic-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/drools-core-reflective-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/drools-model-compiler-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/drools-mvel-compiler-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/drools-mvel-parser-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/error_prone_annotations-2.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/freemarker-2.3.28.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/guava-25.0-jre.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/j2objc-annotations-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/jackson-annotations-2.9.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/jackson-core-2.9.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/jackson-databind-2.9.10.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/javaparser-core-3.13.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/javassist-3.22.0-GA.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/javax.persistence-api-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/jaxb-core-2.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/jaxb-impl-2.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/jboss-jaxb-api_2.3_spec-1.0.1.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/jfreechart-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/jsr305-1.3.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/kie-api-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/kie-internal-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/kie-soup-commons-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/kie-soup-maven-support-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/kie-soup-project-datamodel-api-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/kie-soup-project-datamodel-commons-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/mvel2-2.4.7.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/optaplanner-benchmark-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/optaplanner-core-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/optaplanner-persistence-common-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/optaplanner-persistence-jackson-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/optaplanner-persistence-jaxb-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/optaplanner-persistence-jpa-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/optaplanner-persistence-xstream-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/optaplanner-test-7.34.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/protobuf-java-3.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/reflections-0.9.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/slf4j-api-1.7.26.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/xmlpull-1.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/xpp3_min-1.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/xstream-1.4.11.1.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
