--- a/.classpath
+++ b/.classpath
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry combineaccessrules="false" kind="src" path="/ParserProject">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/activation-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/animal-sniffer-annotations-1.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/antlr-runtime-3.5.2.jar"/>
@@ -63,5 +54,10 @@
 	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/xmlpull-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/xpp3_min-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="Optaplanner/binaries/xstream-1.4.11.1.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/Project">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path=""/>
 </classpath>
