--- a/ParserProject/.classpath
+++ b/ParserProject/.classpath
@@ -58,5 +58,6 @@
 	<classpathentry kind="lib" path="lib/binaries/xmlpull-1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/binaries/xpp3_min-1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/binaries/xstream-1.4.11.1.jar"/>
+	<classpathentry kind="lib" path="lib/binaries/slf4j-simple-1.7.26.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
