--- a/ParserProject/.classpath
+++ b/ParserProject/.classpath
@@ -6,11 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/binaries/activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/binaries/animal-sniffer-annotations-1.14.jar"/>
 	<classpathentry kind="lib" path="lib/binaries/antlr-runtime-3.5.2.jar"/>
@@ -64,6 +59,10 @@
 	<classpathentry kind="lib" path="lib/binaries/xpp3_min-1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/binaries/xstream-1.4.11.1.jar"/>
 	<classpathentry kind="lib" path="lib/binaries/slf4j-simple-1.7.26.jar"/>
-	<classpathentry kind="lib" path="lib/binaries/junit/junit.jar"/>
+	<classpathentry kind="lib" path="lib/binaries/junit-platform-launcher-1.7.0-M1.jar"/>
+	<classpathentry kind="lib" path="lib/binaries/junit-4.13.jar"/>
+	<classpathentry kind="lib" path="lib/binaries/junit.jar"/>
+	<classpathentry kind="lib" path="lib/binaries/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
